LU-2171 ost: remove old checksum verification

it was used long ago to catch bugs. now it conflicts with
LU-2150 where pages are not pinned by the bulk descriptor
and can not be accessed after a call to obd_commitrw().

Signed-off-by: Alex Zhuravlev <alexey.zhuravlev@intel.com>
Change-Id: I5cc05e0836e8e42871aa2eca1d7ec0f402b42ee7